fix alignment of footer items

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -2,6 +2,10 @@
 .small-footer {
   background: rgba(9, 6, 66, 1);
 
+  .social-links a:last-child {
+    margin: 0;
+  }
+
   .container {
     border-top: 1px solid lighten($color-bg-brand-light, 10%);
 
